# essay-ecs

./: Cargo.toml  LICENSE
crates/essay-ecs-app/: Cargo.toml
crates/essay-ecs-app/macros/: Cargo.toml
crates/essay-ecs-app/macros/src/: event.rs  lib.rs
crates/essay-ecs-app/src/: event.rs  lib.rs
crates/essay-ecs-app/src/app/: app.rs  main_schedule.rs  mod.rs  plugin.rs
crates/essay-ecs-app/src/channel/: channel_system.rs
crates/essay-ecs-core/: Cargo.toml
crates/essay-ecs-core/macros/: Cargo.toml
crates/essay-ecs-core/macros/src/: component.rs  label.rs  lib.rs  param.rs  phase.rs
crates/essay-ecs-core/src/: base_app.rs  core_app.rs  lib.rs  resource.rs
crates/essay-ecs-core/src/base_app/: base_app.rs  mod.rs
crates/essay-ecs-core/src/entity/: bundle.rs  column.rs  entity.rs  insert.rs  meta.rs  mod.rs  query.rs  store.rs  table.rs  view.rs
crates/essay-ecs-core/src/error/: mod.rs
crates/essay-ecs-core/src/param/: command.rs  commands.rs  local.rs  mod.rs  param.rs  query.rs  res.rs  world.rs
crates/essay-ecs-core/src/params/: command.rs  local.rs  query.rs  res.rs
crates/essay-ecs-core/src/schedule/: cell.rs  executor.rs  future.rs  mod.rs  multithreaded.rs  phase.rs  plan.rs  planner.rs  preorder.rs  schedule.rs  system.rs  thread_pool.rs  unsafe_cell.rs
crates/essay-ecs-core/src/store/: command.rs  entity_command.rs  entity_ref.rs  mod.rs  store.rs
crates/essay-ecs-core/src/system/: condition.rs  each_system.rs  fun_system.rs  fun_system_excl.rs  mod.rs  (+3 more)
examples/: core-hello.rs  hello.rs
src/: lib.rs
tests/: hello-core-app.rs
(+18 files in other folders)
