[package]
name = "essay-ecs"
version = "0.1.13"
edition = "2021"
publish=false

[lib]
#name = "essaymind"
# crate-type = ["rlib", "cdylib"]
#crate-type = ["cdylib"]
#crate-type = ["rlib"]
path = "src/lib.rs"

[dependencies]
env_logger = { version = "0.10.0" }
log = { version = "0.4.17" }
essay-ecs-core = { path = "crates/essay-ecs-core" }
essay-ecs-app = { path = "crates/essay-ecs-app" }

[workspace]
members = [
    "crates/*",
]
